# hearing

./: .buildinfo  README.md  app.toml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  table_of_contents.html
.claude/skills/hearing/: SKILL.md
.claude/skills/hearing-agents/: SKILL.md
.claude/skills/hearing-agents/references/: from-research-reports.md  key-links.md
.claude/skills/hearing-architecture/: SKILL.md
.claude/skills/hearing-architecture/references/: from-research-reports.md  key-links.md
.claude/skills/hearing-audio-capture/: SKILL.md
.claude/skills/hearing-audio-capture/references/: from-research-reports.md  key-links.md
.claude/skills/hearing-diarization/: SKILL.md
.claude/skills/hearing-diarization/references/: from-research-reports.md  key-links.md
.claude/skills/hearing-frontend/: SKILL.md
.claude/skills/hearing-frontend/references/: from-research-reports.md  key-links.md
.claude/skills/hearing-live-pipeline/: SKILL.md
.claude/skills/hearing-live-pipeline/references/: from-research-reports.md  key-links.md
.claude/skills/hearing-stt/: SKILL.md
.claude/skills/hearing-stt/references/: from-research-reports.md  key-links.md
.claude/skills/hearing/references/: from-research-reports.md  key-links.md
_modules/: index.html
_modules/hearing/: agents.html  capture.html  cli.html  context.html  diarize.html  interfaces.html  pipeline.html  storage.html  stt.html  types.html  vad.html
_sources/: index.rst.txt  table_of_contents.rst.txt
_sources/module_docs/: hearing.rst.txt
_sources/module_docs/hearing/: agents.rst.txt  capture.rst.txt  cli.rst.txt  context.rst.txt  diarize.rst.txt  http_app.rst.txt  interfaces.rst.txt  pipeline.rst.txt  storage.rst.txt  stt.rst.txt  types.rst.txt  vad.rst.txt
examples/: demo_meeting.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.test.ts  api.ts  commands.test.ts  commands.ts  main.tsx  schema.ts  settings.test.ts  settings.ts  styles.css  useRecorder.ts
frontend/src/components/: BackendBanner.tsx  CommandPalette.tsx  FeedbackPanel.tsx  ManualView.tsx  SettingsPanel.tsx  SummaryPanel.tsx  TranscriptView.tsx
hearing/: __init__.py  agents.py  capture.py  cli.py  context.py  diarize.py  http_app.py  interfaces.py  pipeline.py  storage.py  stt.py  types.py  vad.py
misc/docs/: DEPLOYMENT.md  MANUAL.md  Meeting Transcription Apps & a DIY Real-Time Transcription Pipeline on macOS.md  Meeting Transcription and AI Agents - GD Report.md  ROADMAP.md
module_docs/: hearing.html
module_docs/hearing/: agents.html  capture.html  cli.html  context.html  diarize.html  http_app.html  interfaces.html  pipeline.html  storage.html  stt.html  types.html  vad.html
tests/: test_agents.py  test_capture_and_diarize.py  test_capture_ffmpeg.py  test_context.py  test_data_model.py  test_http_app.py  test_integration_say_whisper.py  test_live_pipeline.py  test_openai_stt.py  test_pipeline.py  test_scribed_stt.py  test_storage.py  test_vad.py  test_websearch.py
