[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "hearing"
version = "0.0.2"
description = "Pluggable meeting transcription & context-aware AI agents, batch or live"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "transcription",
    "speech-to-text",
    "meeting",
    "diarization",
    "whisper",
    "macos",
    "ai-agent",
]
authors = [
    { name = "Thor Whalen" },
]
dependencies = [
    "scribed",  # transcription façade: STT engines, VAD, audio conditioning, live streaming
    "numpy>=1.24",
    "soundfile>=0.12",
    "soxr>=0.3",
    "argh>=0.30",
]

[project.license]
text = "mit"

[project.urls]
Homepage = "https://github.com/thorwhalen/hearing"
Repository = "https://github.com/thorwhalen/hearing"
Documentation = "https://thorwhalen.github.io/hearing"

[project.scripts]
hearing = "hearing.cli:main"

[project.optional-dependencies]
# Default local STT engine — now provided by scribed's faster-whisper backend.
whisper = [
    "scribed[faster-whisper]",
]
# Claude-backed agent layer (the offline ExtractiveAgent needs none of this).
agents = [
    "anthropic>=0.40",
]
# Cloud STT via the OpenAI transcription API — provided by scribed's openai backend.
openai = [
    "scribed[openai]",
]
# Acoustic speaker diarization (separate individual remote speakers).
diarize = [
    "pyannote.audio>=3.1",
]
# Live audio-device capture (mic + system audio via an Aggregate Device).
capture = [
    "sounddevice>=0.4",
]
# Neural VAD for the live pipeline (the dependency-free EnergyVAD is the default).
vad = [
    "silero-vad>=5.0",
]
# HTTP API layer (the TypeScript frontend talks to this).
http = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "python-multipart>=0.0.9",
]
# Persisting transcripts to a dol store (a filesystem fallback works without it).
storage = [
    "dol>=3",
]
# Everything needed for the full app (batch + live).
all = [
    "faster-whisper>=1.0",
    "anthropic>=0.40",
    "sounddevice>=0.4",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    "**/*.ipynb",
    ".git",
    ".venv",
    "build",
    "dist",
    "tests",
    "examples",
    "scrap",
]

[tool.ruff.lint]
select = [
    "D100",
]
ignore = [
    "D203",
    "E501",
    "B905",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
    "D",
]
"**/examples/*" = [
    "D",
]
"**/scrap/*" = [
    "D",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "ELLIPSIS",
]

[tool.wads.ci]
project_name = ""

[tool.wads.ci.commands]
pre_test = []
test = []
post_test = []
lint = []
format = []

[tool.wads.ci.env]
required_envvars = []
test_envvars = []
extra_envvars = []

[tool.wads.ci.env.defaults]

[tool.wads.ci.quality.ruff]
enabled = true

[tool.wads.ci.quality.black]
enabled = false

[tool.wads.ci.quality.mypy]
enabled = false

[tool.wads.ci.testing]
enabled = true
python_versions = [
    "3.10",
    "3.12",
]
pytest_args = [
    "-v",
    "--tb=short",
]
coverage_enabled = true
coverage_threshold = 0
coverage_report_format = [
    "term",
    "xml",
]
exclude_paths = [
    "examples",
    "scrap",
]
test_on_windows = true

[tool.wads.ci.metrics]
enabled = true
config_path = ".github/umpyre-config.yml"
storage_branch = "code-metrics"
python_version = "3.10"
force_run = false

[tool.wads.ci.build]
sdist = true
wheel = true

[tool.wads.ci.publish]
enabled = true
skip_ci_marker = "[skip ci]"
publish_marker = "[publish]"

[tool.wads.ci.docs]
enabled = true
builder = "epythet"
ignore_paths = [
    "tests/",
    "scrap/",
    "examples/",
]
